--- a/src/app/features/main-menu/components/starting-modal/starting-modal.component.scss
+++ b/src/app/features/main-menu/components/starting-modal/starting-modal.component.scss
@@ -1,90 +1,90 @@
-.dialog-main {
-  width: 50vw;
-  height: 50vh;
-  border: 1px solid red;
-  background: white;
-  border-radius: 20px;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  overflow: hidden;
-
-  .dialog-header {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-  }
-
-  .dialog-content {
-    height: 80%;
-    width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-
-  .dialog-footer {
-    height: 10%;
-    width: 100%;
-  }
-}
-
-.player-selection {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.player-customization {
-  &-section {
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-  }
-
-  &-item {
-
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-  }
-
-  &-display {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-  }
-
-  &-color {
-    margin-top: 2%;
-    width: 100%;
-  }
-
-  &-name {
-    margin-top: 2%;
-    width: 100%;
-  }
-
-  &-icon {
-    margin-top: 2%;
-    width: 100%;
-
-  }
-}
-
-
-.debug {
-  border: 1px solid purple;
-}
-
+//.dialog-main {
+//  width: 50vw;
+//  height: 50vh;
+//  border: 1px solid red;
+//  background: white;
+//  border-radius: 20px;
+//  padding: 20px;
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  flex-direction: column;
+//  overflow: hidden;
+//
+//  .dialog-header {
+//    height: 10%;
+//    width: 100%;
+//    display: flex;
+//    justify-content: space-between;
+//    align-items: start;
+//  }
+//
+//  .dialog-content {
+//    height: 80%;
+//    width: 100%;
+//    overflow-x: hidden;
+//    overflow-y: auto;
+//  }
+//
+//  .dialog-footer {
+//    height: 10%;
+//    width: 100%;
+//  }
+//}
+//
+//.player-selection {
+//  display: flex;
+//  justify-content: center;
+//  align-items: flex-start;
+//  flex-direction: column;
+//}
+//
+//.player-customization {
+//  &-section {
+//
+//    display: flex;
+//    justify-content: space-around;
+//    align-items: center;
+//    width: 100%;
+//  }
+//
+//  &-item {
+//
+//    display: flex;
+//    justify-content: center;
+//    align-items: flex-start;
+//    flex-direction: column;
+//    width: 50%;
+//    height: 100%;
+//  }
+//
+//  &-display {
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+//    width: 50%;
+//    height: 100%;
+//  }
+//
+//  &-color {
+//    margin-top: 2%;
+//    width: 100%;
+//  }
+//
+//  &-name {
+//    margin-top: 2%;
+//    width: 100%;
+//  }
+//
+//  &-icon {
+//    margin-top: 2%;
+//    width: 100%;
+//
+//  }
+//}
+//
+//
+//.debug {
+//  border: 1px solid purple;
+//}
+//
