--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -1,3 +1,12 @@
+:root {
+  --buttons-box-shadow: 0 0 4px 2px var(--light-black-color);
+  --buttons-active-box-shadow: 0 0 5px 3px var(--light-black-color);
+  --buttons-border-radius: 8px;
+  --buttons-padding: 10px 15px;
+  --buttons-transition: 100ms all ease-in-out;
+}
+
+
 .main-button {
   border-radius: var(--buttons-border-radius);
   padding: var(--buttons-padding);
@@ -36,7 +45,6 @@
     }
   }
 }
-
 
 .main-icon-button {
   width: 20px;
