--- a/src/style/_dialog.scss
+++ b/src/style/_dialog.scss
@@ -1,3 +1,26 @@
-.custom-dialog{
+:root {
+  --box-shadow-dialog: 0 0 16px 8px var(--light-black-color);
+}
 
+.custom-dialog {
+  box-shadow: var(--box-shadow-dialog);
+  border-radius: 16px;
+  padding: 20px;
+  width: 50vw;
+
+  .custom-dialog-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 5vh;
+    margin-bottom: 30px;
+  }
+
+  .custom-dialog-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 5vh;
+    margin-top: 30px;
+  }
 }
